--- a/main.html
+++ b/main.html
@@ -9,5 +9,28 @@
 	<script src="js/app.js"></script>
 </head>
 <body>
+
+<div id="main">
+
+	<div id="Ryu">
+
+<!-- still -->
+		<div class="ryuStill"></div>
+
+<!-- ready -->
+		<div class="ryuReady"></div>
+
+<!-- throwing -->
+		<div class="ryuThrowing"></div>
+
+<!-- hadouken-->
+		<div class="hadouken"></div>
+
+</div> <!-- / div for Ryu-->
+	
+
+</div> <!-- / dive for main ->
+
+
 </body>
 </html>
