--- a/main.html
+++ b/main.html
@@ -29,7 +29,11 @@
 </div> <!-- / div for Ryu-->
 	
 
-</div> <!-- / dive for main ->
+</div> <!-- / dive for main -->
+
+<audio id="hadouken-sound" src="sound/hadouken.mp3"></audio>
+
+
 
 
 </body>
